- Replaced loader-utils with Hasher.js class - Every occurence of each class is replaced with the same hash (bug fix) - Comma separated selectors are now supported (bug fix) - (bug fix) extra spaces are replaced with single space in selectors instead of empty string

--- a/test/public/ExampleClass.css
+++ b/test/public/ExampleClass.css
@@ -5,3 +5,6 @@
   height: 50px;
 }
 
+.secondExampleSelector {
+  background-color: blue;
+}
